# HolidayMcMovieMaker

./: .gitignore  CMakeLists.txt  README.md
src/: HolidayMcMovieMaker.cpp  HolidayMcMovieMaker.hpp  main.cpp
